# image-search-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/cli/: app.py  scan.py
src/utils/: processor.py  scanner.py  tesseract.py
